# test-failer-in-cpp-arundas005

./: CMakeLists.txt  TestPrintColorMap.cpp  TestPrintColorMap.h  TestTShirtSize.cpp  TestTshirtsize.h  TestWeatherReport.cpp  TestWeatherReport.h  misaligned.cpp  misaligned.h  tshirts.cpp  tshirts.h  weatherreport.cpp  weatherreport.h
.github/workflows/: expectfail.sh  main-workflow.yml
